--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,19 @@ background-color: rgba(0,0,0,0.55);
 */  
 
 
+.button{
+
+cursor: pointer
+
+}
+
 
 .main-menu{
  
 font-size: 15px;
 float: right;
 margin-right: -210px;
- 
+
 }
 
 .main-menu li:hover {
@@ -96,7 +102,8 @@ height: 31px; /* если уберу высоту,почему внизу лин
 .active{
 
 background-image:linear-gradient(#4faedb,#2e7ac4);
-
+border-right: 0.01px solid transparent; 
+border-left: 0.01px solid transparent; 
 }
 
 
